@@ -1,64 +1,96 @@
+<!-- This File is an example based on Call of Duty weaponry 
+     You should modify this file to fit your game -->
+     
 <configuration plugin="xlrstats">
-	<settings name="weapons">
-		<set name="bar_mp">1.00</set> 
-		<set name="bar_slow_mp">1.15</set> 
-		<set name="bren_mp">1.10</set> 
-		<set name="colt_mp">1.50</set> 
-		<set name="enfield_mp">1.35</set> 
-		<set name="kar98k_mp">1.25</set> 
-		<set name="kar98k_sniper_mp">1.00</set> 
-		<set name="fg42_mp">0.50</set> 
-		<set name="fg42_semi_mp">0.65</set> 
-		<set name="fraggrenade_mp">0.75</set> 
-		<set name="grenade_mp">0.75</set> 
-		<set name="luger_mp">1.50</set> 
-		<set name="m1carbine_mp">1.25</set> 
-		<set name="m1garand_mp">1.00</set> 
-		<set name="mg42_bipod_mp">1.00</set> 
-		<set name="mg42_bipod_stand_mp">1.00</set> 
-		<set name="mg42_bipod_prone_mp">1.00</set> 
-		<set name="mk1britishfrag_mp">0.75</set> 
-		<set name="mod_explosive_mp">0.10</set> 
-		<set name="mod_falling_mp">1.25</set> 
-		<set name="mod_melee_mp">1.60</set> 
-		<set name="mod_projectile_mp">0.10</set> 
-		<set name="mod_suicide_mp">0.50</set> 
-		<set name="mosin_nagant_mp">1.25</set> 
-		<set name="mosin_nagant_sniper_mp">1.00</set> 
-		<set name="mp40_mp">0.80</set> 
-		<set name="mp44_mp">0.90</set> 
-		<set name="mp44_semi_mp">1.15</set> 
-		<set name="panzerfaust_mp">1.15</set> 
-		<set name="ppsh_mp">0.80</set> 
-		<set name="ppsh_semi_mp">1.15</set> 
-		<set name="rgd-33russianfrag_mp">0.75</set> 
-		<set name="springfield_mp">1.00</set> 
-		<set name="sten_mp">1.10</set> 
-		<set name="stielhandgranate_mp">0.75</set> 
-		<set name="thompson_mp">0.80</set> 
-		<set name="thompson_semi_mp">1.15</set>
-		<set name="gewehr43_mp">1.10</set>
-		<set name="svt40_mp">1.10</set>
-		<set name="panzeriv_turret_mp">0.8</set>
-		<set name="t34_turret_mp">0.8</set>
-		<set name="sherman_turret_mp">0.8</set>
-		<set name="flak88_turret_mp">0.8</set>
-		<set name="mg42_turret_mp">0.8</set>
-		<set name="mg30cal_mp">1</set>
-		<set name="mg34_mp">1</set>
-		<set name="mg34_tank_mp">1</set>
-		<set name="sg43_tank_mp">1</set>
-		<set name="50cal_tank_mp">1</set>
-		<set name="su152_turret_mp">0.8</set>
-		<set name="elefant_turret_mp">1</set>
-		<set name="sg43_turret_mp">0.8</set>
-		<set name="flamethrower_mp">1.50</set>
-		<set name="bazooka_mp">1.15</set>
-		<set name="panzerschreck_mp">1.15</set>
-		<set name="satchelcharge_mp">1.50</set>
-		<set name="webley_mp">1.50</set>
-		<set name="30cal_tank_mp">1</set>
-		<set name="dp28_mp">1</set>
-		<set name="tt33_mp">1.50</set>
-	</settings>
+  <settings name="commands">
+    <set name="xlrstats">1</set>
+    <set name="xlrtopstats">2</set>
+    <set name="xlrhide">60</set>
+  </settings>
+  <settings name="weapons">
+    <set name="bar_mp">1.00</set> 
+    <set name="bar_slow_mp">1.15</set> 
+    <set name="bren_mp">1.10</set> 
+    <set name="colt_mp">1.50</set> 
+    <set name="enfield_mp">1.35</set> 
+    <set name="kar98k_mp">1.25</set> 
+    <set name="kar98k_sniper_mp">1.00</set> 
+    <set name="fg42_mp">0.50</set> 
+    <set name="fg42_semi_mp">0.65</set> 
+    <set name="fraggrenade_mp">0.75</set> 
+    <set name="grenade_mp">0.75</set> 
+    <set name="luger_mp">1.50</set> 
+    <set name="m1carbine_mp">1.25</set> 
+    <set name="m1garand_mp">1.00</set> 
+    <set name="mg42_bipod_mp">1.00</set> 
+    <set name="mg42_bipod_stand_mp">1.00</set> 
+    <set name="mg42_bipod_prone_mp">1.00</set> 
+    <set name="mk1britishfrag_mp">0.75</set> 
+    <set name="mod_explosive_mp">0.10</set> 
+    <set name="mod_falling_mp">1.25</set> 
+    <set name="mod_melee_mp">1.60</set> 
+    <set name="mod_projectile_mp">0.10</set> 
+    <set name="mod_suicide_mp">0.50</set> 
+    <set name="mosin_nagant_mp">1.25</set> 
+    <set name="mosin_nagant_sniper_mp">1.00</set> 
+    <set name="mp40_mp">0.80</set> 
+    <set name="mp44_mp">0.90</set> 
+    <set name="mp44_semi_mp">1.15</set> 
+    <set name="panzerfaust_mp">1.15</set> 
+    <set name="ppsh_mp">0.80</set> 
+    <set name="ppsh_semi_mp">1.15</set> 
+    <set name="rgd-33russianfrag_mp">0.75</set> 
+    <set name="springfield_mp">1.00</set> 
+    <set name="sten_mp">1.10</set> 
+    <set name="stielhandgranate_mp">0.75</set> 
+    <set name="thompson_mp">0.80</set> 
+    <set name="thompson_semi_mp">1.15</set>
+    <set name="gewehr43_mp">1.10</set>
+    <set name="svt40_mp">1.10</set>
+    <set name="panzeriv_turret_mp">0.8</set>
+    <set name="t34_turret_mp">0.8</set>
+    <set name="sherman_turret_mp">0.8</set>
+    <set name="flak88_turret_mp">0.8</set>
+    <set name="mg42_turret_mp">0.8</set>
+    <set name="mg30cal_mp">1</set>
+    <set name="mg34_mp">1</set>
+    <set name="mg34_tank_mp">1</set>
+    <set name="sg43_tank_mp">1</set>
+    <set name="50cal_tank_mp">1</set>
+    <set name="su152_turret_mp">0.8</set>
+    <set name="elefant_turret_mp">1</set>
+    <set name="sg43_turret_mp">0.8</set>
+    <set name="flamethrower_mp">1.50</set>
+    <set name="bazooka_mp">1.15</set>
+    <set name="panzerschreck_mp">1.15</set>
+    <set name="satchelcharge_mp">1.50</set>
+    <set name="webley_mp">1.50</set>
+    <set name="30cal_tank_mp">1</set>
+    <set name="dp28_mp">1</set>
+    <set name="tt33_mp">1.50</set>
+
+    <set name="SVT40_mp">1.10</set>
+    <set name="PPS42_mp">0.80</set>
+    <set name="g43_mp">1.10</set>
+    <set name="frag_grenade_german_mp">0.75</set>
+    <set name="frag_grenade_british_mp">0.75</set>
+    <set name="frag_grenade_russian_mp">0.75</set>
+    <set name="frag_grenade_american_mp">0.75</set>
+    <set name="cook_frag_grenade_german_mp">0.75</set>
+    <set name="cook_frag_grenade_british_mp">0.75</set>
+    <set name="cook_frag_grenade_russian_mp">0.75</set>
+    <set name="cook_frag_grenade_american_mp">0.75</set>
+    <set name="cook2_frag_grenade_german_mp">0.75</set>
+    <set name="cook2_frag_grenade_british_mp">0.75</set>
+    <set name="cook2_frag_grenade_russian_mp">0.75</set>
+    <set name="cook2_frag_grenade_american_mp">0.75</set>
+    <set name="cook3_frag_grenade_german_mp">0.75</set>
+    <set name="cook3_frag_grenade_british_mp">0.75</set>
+    <set name="cook3_frag_grenade_russian_mp">0.75</set>
+    <set name="cook3_frag_grenade_american_mp">0.75</set>
+  </settings>
+  <settings name="replacements">
+    <set name="MOD_MELEE">mod_melee</set>
+    <set name="MOD_FALLING">mod_falling</set>
+  </settings>
 </configuration>
