@@ -1,6 +1,6 @@
 #
-# BigBrotherBot(B3) (www.bigbrotherbot.com)
-# Copyright (C) 2005 Michael "ThorN" Thornton
+# World of Padman parser for BigBrotherBot(B3) (www.bigbrotherbot.com)
+# Copyright (C) 2008 Mark Weirath (xlr8or@xlr8or.com)
 # 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
